# calvin

./: .gitattributes  .gitignore  .gitmessage  .pre-commit-config.yaml  Dockerfile  Dockerfile.dev  LICENSE  LICENSE_COMPATIBILITY.md  Makefile  Makefile.ps1  PLUGIN_ARCHITECTURE_ANALYSIS.md  PLUGIN_UI_PROPOSAL.md  PROJECT_PLAN.md  QUICKSTART_DEVELOP.md  QUICKSTART_WINDOWS.md  README.md  SETUP_PRE_COMMIT.md  docker-compose.dev.yml  docker-compose.yml  make.ps1  setup-windows.ps1
.github/: PULL_REQUEST_TEMPLATE.md  README.md
backend/: README.md  check_plugins.py  pyproject.toml  re_enable_plugins.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/routes/: calendar.py  config.py  health.py  images.py  keyboard.py  plugins.py  system.py  web_services.py
backend/app/models/: calendar.py  db_models.py  web_service.py
backend/app/plugins/: INTERFACE.md  __init__.py  base.py  hooks.py  loader.py  manager.py  protocols.py  registration.py  registry.py  types.py
backend/app/plugins/calendar/: __init__.py  google.py  ical.py
backend/app/plugins/image/: __init__.py  imap.py  local.py  picsum.py  unsplash.py
backend/app/plugins/service/: __init__.py  iframe.py  mealie.py  weather.py  yr_weather.py
backend/app/services/: __init__.py  calendar_service.py  config_service.py  display_power_service.py  image_service.py  keyboard_mapping_service.py  keyboard_service.py  plugin_calendar_service.py  plugin_image_service.py  plugin_installer.py  scheduler.py  weather_cache.py  web_service_service.py
backend/app/utils/: google_calendar.py  ical_parser.py  keyboard.py  migrations.py
backend/scripts/: fix-lint.ps1  fix-lint.sh
backend/tests/: README.md  __init__.py  conftest.py
backend/tests/integration/: test_api_calendar.py  test_api_config.py  test_api_plugins.py
backend/tests/unit/: test_calendar_service.py  test_config_service.py  test_health.py  test_image_service.py  test_plugin_error_handling.py  test_plugin_installer.py  test_plugin_loader.py  test_plugin_protocols.py  test_plugin_registry.py
config/: default.yaml  keyboard-mappings.json
docker/: Dockerfile.backend-dev  Dockerfile.frontend-dev  README.md  supervisord.conf
docs/: ADD_GOOGLE_CALENDAR.md  PLUGIN_DEVELOPMENT.md  PLUGIN_INSTALLATION.md  SETUP_LINUX.md  SETUP_WINDOWS.md
frontend/: .eslintignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
rpi-image/: DEBUG_BACKEND.md  FIX_BOOT_LOOP.md  FIX_OOM.md  FLASH_DEV_IMAGE.md  GETTING_STARTED.md  HOW_IT_WORKS.md  (+22 more)
(+69 files in other folders)
